Add link to my color vision generator

--- a/index.html
+++ b/index.html
@@ -10,4 +10,8 @@
         <div class="title">Regression</div>
         <span class="desc">TensorFlow Neural Network</span>
     </a>
+    <a href="http://cbtest.notquite.me">
+        <div class="title">Color Vision Test Generator</div>
+        <span class="desc">Generate a color vision test with custom text</span>
+    </a>
 </ul>
