--- a/index.html
+++ b/index.html
@@ -1,17 +1,135 @@
-<link rel="stylesheet" href="./lib/root.css">
+<link rel="stylesheet" href="/lib/root.css">
+<div class="outer">
+    <h1>Not Quite Me</h1>
+    <h2>Live Projects</h2>
+    <div class="cards">
+        <a class="card live-project" href="Kinematics/">
+            <i class="c-sharp"></i>
+            <div class="title">Kinematics</div>
+            <span class="desc">An example of Inverse Kinematics using P5.js</span>
+            <div class="icons">
+                <icon class="js"></icon>
+            </div>
+        </a>
+        <a class="card live-project" href="TensorFlow1/">
+            <div class="title">Regression</div>
+            <span class="desc">TensorFlow Neural Network</span>
+            <div class="icons">
+                <icon class="js"></icon>
+            </div>
+        </a>
+        <a class="card wide live-project" href="http://cbtest.notquite.me">
+            <div class="title">Color Vision Test Generator</div>
+            <span class="desc">Generate a color vision test with custom text</span>
+            <div class="icons">
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+    </div>
+    <h2>Code Challenges</h2>
+    <h3>Online</h3>
+    <div class="cards">
+        <a class="card" href="https://github.com/tucker87/AdventChallenge2015">
+            <div class="title">AdventChallenge2015</div>
+            <span class="desc">Daily Code Challenges</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/HackerRank">
+            <div class="title">HackerRank</div>
+            <span class="desc">Some of the early challenges I did on HackerRank.com</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/BowlingKata">
+            <div class="title">Bowling Kata</div>
+            <span class="desc">A Kata for learning TDD</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/LeagueApi">
+            <div class="title">League API</div>
+            <span class="desc">Itegration with League of Legends API for a contest</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+                <icon class="js"></icon>
+            </div>
+        </a>
+    </div>
 
-<h2>Projects</h2>
-<div class="blocks">
-    <a href="Kinematics/">
-        <div class="title">Kinematics</div>
-        <span class="desc">An example of Inverse Kinematics using P5.js</span>
-    </a>
-    <a href="TensorFlow1/">
-        <div class="title">Regression</div>
-        <span class="desc">TensorFlow Neural Network</span>
-    </a>
-    <a href="http://cbtest.notquite.me">
-        <div class="title">Color Vision Test Generator</div>
-        <span class="desc">Generate a color vision test with custom text</span>
-    </a>
-</ul>
+    <h3>Self-Made</h3>
+    <div class="cards">
+        <a class="card" href="https://github.com/tucker87/CodingKata-Infinites">
+            <div class="title">CodingKata-Infinites</div>
+            <span class="desc">A challenge to learn about the yeild keyword in C#</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/FizzBuzzComplex">
+            <div class="title">Fizz Buzz Complex</div>
+            <span class="desc">Take basic Fizz Buzz and allow lamda functions for the checks</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+    </div>
+
+    <h2>Graveyard (Abandonware)</h3>
+    <div class="cards">
+        <a class="card" href="https://github.com/tucker87/5ECharacterBuilder2">
+            <div class="title">D&D 5E Charater Builder</div>
+            <span class="desc">A decorator based character building tool</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/IronLake">
+            <div class="title">Iron Lake</div>
+            <span class="desc">My attempt at making a game engine (ended up with basically Unity Game Objects)</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/LinkedTracker">
+            <div class="title">Linked Tracker</div>
+            <span class="desc">Websocket based multiplayer tracker for A Link to the Past Randomizer</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="c-sharp"></icon>
+                <icon class="vue"></icon>
+                <icon class="js"></icon>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/SpecterOps">
+            <div class="title">Specter Ops</div>
+            <span class="desc">Digital map for the board game Specter Ops</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="js"></icon>
+                <icon class="c-sharp"></icon>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/TickerFetch">
+            <div class="title">Ticker Fetch</div>
+            <span class="desc">Tool for pulling in Stock and Crypto prices into an Excel sheet (This has been moved to Google Sheets)</span>
+            <div class="icons">
+                <icon class="github"></icon>
+                <icon class="js"></icon>
+            </div>
+        </a>
+        
+        
+    </div>
+</div>
