Added work history and reduced edge glow effects

--- a/index.html
+++ b/index.html
@@ -4,11 +4,53 @@
 
 <div class="outer">
     <h1>Not Quite Me</h1>
+    <h2>Work History</h2>
+    <div class="cards">
+        <a class="card" href="https://github.com/tucker87/">
+            <div class="card-content">
+                <div class="title">Junior Developer</div>
+                <span class="desc">Venminder (2014)</span>
+                <div class="icons">
+                    <icon class="github"></icon>
+                    <icon class="c-sharp"></icon>
+                    <icon class="js"></icon>
+                    <icon class="jq"></icon>
+                    <icon class="ko"></icon>
+                </div>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/">
+            <div class="card-content">
+                <div class="title">Software Developer</div>
+                <span class="desc">Refund Advantage (2014-2015)</span>
+                <div class="icons">
+                    <icon class="github"></icon>
+                    <icon class="c-sharp"></icon>
+                    <icon class="vb"></icon>
+                    <icon class="js"></icon>
+                    <icon class="jq"></icon>
+                </div>
+            </div>
+        </a>
+        <a class="card" href="https://github.com/tucker87/">
+            <div class="card-content">
+                <div class="title">Jason Tucker</div>
+                <span class="desc">Technical Lead for Strategic Marketing (2015-Present)</span>
+                <div class="icons">
+                    <icon class="github"></icon>
+                    <icon class="c-sharp"></icon>
+                    <icon class="vue"></icon>
+                    <icon class="js"></icon>
+                    <icon class="jq"></icon>
+                </div>
+            </div>
+        </a>
+    </div>
+    <hr/>
     <h2>Live Projects</h2>
     <div class="cards">
         <a class="card live-project" href="Kinematics/">
             <div class="card-content">
-                <i class="c-sharp"></i>
                 <div class="title">Kinematics</div>
                 <span class="desc">An example of Inverse Kinematics using P5.js</span>
                 <div class="icons">
