Move name to header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <div class="header"></div>
 
 <div class="outer">
-    <h1>Not Quite Me</h1>
+    <h1>Not Quite Jason Tucker</h1>
     <h2>Work History</h2>
     <div class="cards">
         <a class="card" href="https://github.com/tucker87/">
@@ -34,8 +34,8 @@
         </a>
         <a class="card" href="https://github.com/tucker87/">
             <div class="card-content">
-                <div class="title">Jason Tucker</div>
-                <span class="desc">Technical Lead for Strategic Marketing (2015-Present)</span>
+                <div class="title">Technical Lead</div>
+                <span class="desc">Strategic Marketing (2015-Present)</span>
                 <div class="icons">
                     <icon class="github"></icon>
                     <icon class="c-sharp"></icon>
