Open links in new windows to fix github framing issue

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -23,15 +23,15 @@
                 <div class="items">
                     <div class="item">
                         <span class="title">Repos</span>
-                        <a class="value" href="https://github.com/tucker87">github.com/tucker87</a>
+                        <a class="value" target="_blank" href="https://github.com/tucker87">github.com/tucker87</a>
                     </div>
                     <div class="item">
                         <span class="title">Portfolio</span>
-                        <a class="value" href="https://notquite.me">notquite.me</a>
+                        <a class="value" target="_blank" href="https://notquite.me">notquite.me</a>
                     </div>
                     <div class="item">
                         <span class="title">This Resume</span>
-                        <a class="value" href="https://github.com/tucker87/tucker87.github.io/tree/master/Resume">github.com/tucker87/resume</a>
+                        <a class="value" target="_blank" href="https://github.com/tucker87/tucker87.github.io/tree/master/Resume">github.com/tucker87/resume</a>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                        <li>Developed an Access database that interfaced with Apple's web API to track all Apple repairs done by Best Buy.</li>
                        <li>Published board game helpers apps for mobile webOS platform</li>
                        <li>Competed in a time limited API challenge for RIOT Games.</li>
-                       <li>This resume's source code is available on <a class="link" href="https://github.com/tucker87">GitHub</a></li>
+                       <li>This resume's source code is available on <a class="link" target="_blank" href="https://github.com/tucker87">GitHub</a></li>
                    </ul>
                 </div>
             </div>
