--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
     <hr/>
     <h2>Live Projects</h2>
     <div class="cards">
+        <a class="card live-project" href="CssBattles/">
+            <div class="card-content">
+                <div class="title">CssBattles</div>
+                <span class="desc">Interactive collection of solutions to CSS Battles</span>
+                <div class="icons">
+                    <icon class="css3"></icon>
+                </div>
+            </div>
+        </a>
         <a class="card live-project" href="Kinematics/">
             <div class="card-content">
                 <div class="title">Kinematics</div>
