Change link to Colorblind test generator

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </a>
-        <a class="card wide live-project" href="http://cbtest.notquite.me">
+        <a class="card wide live-project" href="https://notquitecbtest.azurewebsites.net">
             <div class="card-content">
                 <div class="title">Color Vision Test Generator</div>
                 <span class="desc">Generate a color vision test with custom text</span>
