--- a/Resume/index.html
+++ b/Resume/index.html
@@ -95,7 +95,7 @@
                                 <li>Successfully migrated company to CI and automated deployments via Azure DevOps</li>
                                 <li>Created custom Single-Sign-On systems that is being adopted to company wide</li>
                                 <li>Introduced and taught out reactive design with Vue for improved UX development</li>
-                                <li>Integrated with multiple eternal CRMs, DMSs, email services and Automotive validation and verification systems</li>
+                                <li>Integrated with multiple external CRMs, DMSs, email services and Automotive validation and verification systems</li>
                             </ul>
                         </div>
                     </div>
