Add Icons to Header

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -6,9 +6,26 @@
     <title>Jason Tucker - Resume</title>
     <link rel="stylesheet" href="css-reset.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/lib/icons.css">
 </head>
 <body>
-    <div class="header">Shepherdsville, KY | 502-309-0000 | jtgeek@gmail.com</div>
+    <div class="header">
+        <div>Shepherdsville, KY</div>
+        <div>502-309-0000</div>
+        <div>jtgeek@gmail.com</div>
+        <div class="logo">
+            <a href="https://github.com/tucker87">
+                <icon class="github"></icon>
+                <span>tucker87</span>
+            </a>
+        </div>
+        <div class="logo">
+            <a href="https://www.linkedin.com/in/jtucker2">
+                <icon class="linkedIn"></icon>
+                <span>jtucker2</span>
+            </a>
+        </div>
+    </div>
     <div class="sub-header">
         <div class="who-am-i">
             <span class="name">Jason Tucker</span>
@@ -21,10 +38,6 @@
             <div class="section contact">
                 <div class="title">Sites and Code</div>
                 <div class="items">
-                    <div class="item">
-                        <span class="title">Repos</span>
-                        <a class="value" target="_blank" href="https://github.com/tucker87">github.com/tucker87</a>
-                    </div>
                     <div class="item">
                         <span class="title">Portfolio</span>
                         <a class="value" target="_blank" href="https://notquite.me">notquite.me</a>
