Add QR Code link to site with tracking

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <div class="header">
-        <div>Shepherdsville, KY</div>
-        <div>502-309-0000</div>
         <div>jtgeek@gmail.com</div>
+        <div>502-309-0000</div>
         <div class="logo">
             <a href="https://github.com/tucker87">
                 <icon class="github"></icon>
@@ -25,11 +24,15 @@
                 <span>jtucker2</span>
             </a>
         </div>
+        <div class="logo">
+            <img style="aspect-ratio: 1; width: 73px;" src="/lib/qr-code-blue-frame.png"/>
+        </div>
     </div>
     <div class="sub-header">
         <div class="who-am-i">
             <span class="name">Jason Tucker</span>
             <span class="title">Technical Lead</span>
+            <div>Shepherdsville, KY</div>
         </div>
         <p class="description">Self Trained Software Engineer with a drive to learn new technologies. Friendly provider of deep programming knowledge. Skills in Database Design, DevOps, Front-End and Back-End design.</p>
     </div>
